crates/toml_edit/tests/snapshots/invalid/float/trailing-exp-plus.stderr
TOML parse error at line 1, column 26
  |
1 | trailing-exp-plus = 0.0e+
  |                          ^
invalid exponent, expected digits
